fixed ackley function description

--- a/WOA.ipynb
+++ b/WOA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBwa3PXAR36ta8AMpg1tYQ",
+      "authorship_tag": "ABX9TyONSkZh3/0Fz5h3TBxojVGX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "#Definition of the Ackley function\n",
-        "The Ackley function is widely used for testing optimization algorithms. In its two-dimensional form, as shown in the plot above, it is characterized by a nearly flat outer region, and a large hole at the centre. The function poses a risk for optimization algorithms, particularly hill climbing algorithms, to be trapped in one of its many local minima.\n",
+        "The Ackley function is widely used for testing optimization algorithms. In its two-dimensional form it is characterized by a nearly flat outer region, and a large hole at the centre. The function poses a risk for optimization algorithms, particularly hill climbing algorithms, to be trapped in one of its many local minima.\n",
         "---\n",
         "\n"
       ],
